# apps/proposer/src/routes/blocks.mjs
@@ -1,0 +1,17 @@
+// /* eslint-disable import/no-unresolved */
+// import express from 'express';
+// import makeBlock from '../services/blocks.mjs';
+
+// const router = express.Router();
+
+// router.post('/new', async (req, res, next) => {
+//   try {
+//     const transaction = req.body;
+//     await makeBlock(transaction);
+//     return res.sendStatus(200);
+//   } catch (error) {
+//     return next(error);
+//   }
+// });
+
+// export default router;
